local-fmt/tests/ui/gen_static_message/not_found_ident.stderr
error[E0425]: cannot find value `WORLD` in this scope
 --> tests/ui/gen_static_message/not_found_ident.rs:3:29
  |
3 | const _: StaticMessage<1> = gen_static_message!("Hello! {WORLD}");
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the macro `gen_static_message` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/gen_static_message/not_found_ident.rs:3:29
  |
3 | const _: StaticMessage<1> = gen_static_message!("Hello! {WORLD}");
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `1`, found `0`
  |
  = note: expected struct `RefMessage<'static, 1>`
             found struct `RefMessage<'_, 0>`
  = note: this error originates in the macro `gen_static_message` (in Nightly builds, run with -Z macro-backtrace for more info)
